<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_header_general"
        android:icon="@drawable/ic_info_black_24dp">
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_notification_preference" />
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />
</PreferenceCategory>
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <PreferenceCategory android:title="@string/pref_header_notifications"
        android:icon="@drawable/ic_notifications_black_24dp">
        <SwitchPreference
            android:defaultValue="true"
            android:key="msg_notification_switch"
            android:summary="@string/pref_description_social_recommendations"
            android:title="@string/pref_notification_preference"
            android:background="@color/background_grey"
            android:icon="@drawable/ic_notifications_black_24dp"/>
        <MultiSelectListPreference
            android:entries="@array/pref_notification_titles"
            android:entryValues="@array/pref_Notification_values"
            android:key="Notification_options"
            android:dialogTitle="@string/pref_title_notification_options"
            android:dependency="msg_notification_switch"/>
        <!--<ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_add_friends_to_messages"
            android:dependency="msg_notification_switch"/>-->
    </PreferenceCategory>
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


</PreferenceScreen>
