<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_description_background"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background"/>

    <!--<ImageView
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:contentDescription="@string/content_description_background"
        android:scaleType="centerCrop"
        android:src="@drawable/email"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/emailContinue"
        android:layout_marginTop="16dp" />-->
    <EditText
        android:id="@+id/email"
        android:background="@drawable/edittextstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="15"
        android:hint="@string/Email"
        android:inputType="text"
        android:layout_above="@+id/email_sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp" />
    <Button
        android:id="@+id/email_sign_in_button"
        style="@style/buttonPrimaryStyle"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:paddingEnd="32dp"
        android:paddingLeft="@dimen/base_margin_horizontal"
        android:paddingRight="32dp"
        android:paddingStart="@dimen/base_margin_horizontal"
        android:text="@string/SignIn"
        android:hint="E-mail"
        android:layout_above="@+id/login_base_form"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp" />
    <LinearLayout
        android:id="@+id/login_base_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/black_transparent_70percent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="@dimen/base_margin_horizontal"
        android:paddingRight="@dimen/base_margin_horizontal"
        android:paddingTop="10dp"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/login_form_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/base_margin"
            android:text="@string/Log_in_using"
            android:textColor="@color/textIconColorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignIn_btn"
            style="@style/buttonPrimaryStyle"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/email"
            android:drawableStart="@drawable/email"
            android:paddingEnd="32dp"
            android:paddingLeft="@dimen/base_margin_horizontal"
            android:paddingRight="32dp"
            android:paddingStart="@dimen/base_margin_horizontal"
            android:text="@string/E_MAIL"
            />

       <!-- <Button
            android:id="@+id/login_form_facebook"
            style="@style/buttonPrimaryStyle"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_vertical_half"
            android:background="@drawable/button_facebook_style"
            android:drawableLeft="@drawable/facebook_icon"
            android:drawableStart="@drawable/facebook_icon"
            android:paddingEnd="32dp"
            android:paddingLeft="@dimen/base_margin_horizontal"
            android:paddingRight="32dp"
            android:paddingStart="@dimen/base_margin_horizontal"
            android:text="@string/FACEBOOK"
            />-->

        <RelativeLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_vertical_half"
            android:orientation="horizontal">

           <!-- <TextView
                android:id="@+id/login_form_registration_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawableEnd="@drawable/arrow_right_accent"
                android:drawablePadding="4dp"
                android:drawableRight="@drawable/arrow_right_accent"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/Dont_have_an_account"
                android:textColor="@color/textIconColorPrimary"
                android:textSize="16sp"/>-->

            <TextView
                android:id="@+id/login_form_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawableEnd="@drawable/arrow_right_accent"
                android:drawablePadding="4dp"
                android:drawableRight="@drawable/arrow_right_accent"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/Skip"
                android:textColor="@color/textIconColorPrimary"
                android:textSize="16sp"/>
        </RelativeLayout>
    </LinearLayout>
    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->

    <!-- Registration form-->

</RelativeLayout>